--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,29 +4,29 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
-  url = "#about"
+  name = "开始"
+  url = "#hero"
   weight = 10
 
 [[main]]
-  name = "Posts"
+  name = "需求分析"
   url = "#posts"
   weight = 20
 
 [[main]]
-  name = "Projects"
+  name = "规范设计"
   url = "#projects"
   weight = 30
 
 [[main]]
-  name = "Publications"
+  name = "软件组织"
   url = "#featured"
   weight = 40
 
 [[main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 60
+  name = "团队介绍"
+  url = "#people"
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
