--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,9 +24,14 @@
   weight = 40
 
 [[main]]
+  name = "核心算法"
+  url = "#algorithm"
+  weight = 50
+
+[[main]]
   name = "团队介绍"
   url = "#people"
-  weight = 50
+  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
